// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots default as links 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-zhyi0r=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <a
            aria-selected={true}
            data-css-1yv0lo1=""
            href="https://duckduckgo.com"
            id={1}
            onClick={[Function]}
            role="tab"
            tabIndex="-1"
          >
            <div
              data-css-1vk06pf=""
            >
              External link
              <span
                data-css-1s34vsj=""
              />
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default default 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-zhyi0r=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <button
              aria-selected={true}
              data-css-1yv0lo1=""
              id="example1"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Menu 1
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-12g3ebl=""
              id="example2"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Menu 2
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-12g3ebl=""
              id="example3"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Menu 3
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-12g3ebl=""
              id="example4"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Menu 4
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
            <button
              aria-selected={false}
              data-css-12g3ebl=""
              id="example5"
              onClick={[Function]}
              role="tab"
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Menu 5
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
          </div>
          <div
            aria-labelledby="example3"
            role="tabpanel"
          >
            <div
              className="content"
            >
              Menu stuff 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots default no items 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-zhyi0r=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides list no borderBottom (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-zhyi0r=""
          onKeyDown={[Function]}
          role="tablist"
          style={
            Object {
              "borderBottom": "none",
            }
          }
          tabIndex="0"
        >
          <button
            aria-selected={true}
            data-css-1yv0lo1=""
            id="wow"
            onClick={[Function]}
            role="tab"
            tabIndex="-1"
          >
            <div
              data-css-1vk06pf=""
            >
              Wow
              <span
                data-css-1s34vsj=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides listItem disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div
          data-css-zhyi0r=""
          onKeyDown={[Function]}
          role="tablist"
          tabIndex="0"
        >
          <button
            aria-selected={true}
            data-css-1yv0lo1=""
            id="wow"
            onClick={[Function]}
            role="tab"
            style={
              Object {
                "opacity": 0.5,
              }
            }
            tabIndex="-1"
          >
            <div
              data-css-1vk06pf=""
            >
              Disabled look
              <span
                data-css-1s34vsj=""
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots style overrides panel disabled opacity (style) 1`] = `
<div
  data-css-claeju=""
>
  <div
    data-css-wx7ofq=""
  >
    <div
      data-css-1nnsngu=""
    >
      <div
        data-css-claeju=""
      >
        <div>
          <div
            data-css-zhyi0r=""
            onKeyDown={[Function]}
            role="tablist"
            tabIndex="0"
          >
            <button
              aria-selected={true}
              data-css-1yv0lo1=""
              id="wow"
              onClick={[Function]}
              role="tab"
              style={
                Object {
                  "opacity": 0.5,
                }
              }
              tabIndex="-1"
            >
              <div
                data-css-1vk06pf=""
              >
                Disabled look
                <span
                  data-css-1s34vsj=""
                />
              </div>
            </button>
          </div>
          <div
            aria-labelledby="wow"
            role="tabpanel"
            style={
              Object {
                "border": "1px solid red",
              }
            }
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
